shortener-fe/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  font-family: Arial;
}

h1 {
  margin: 0 auto;
}

.dataTable {
  table-layout: auto;
  width: 90%;
  margin: 0 auto;
  font-family: sans-serif;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.dataTable thead tr {
  background-color: #009879;
  color: #ffffff;
  text-align: left;
  font-weight: bold;
}

.dataTable th,
.dataTable td {
  overflow: hidden;
  text-overflow: ellipsis;
  word-wrap: break-word;
  padding: 12px 15px;
}

.dataTable tbody tr {
  border-bottom: 1px solid #dddddd;
}
.dataTable tbody tr:nth-of-type(even) {
  background-color: #f3f3f3;
}

.dataTable tbody tr:last-of-type {
  border-bottom: 2px solid #009879;
}

.dataTable tbody tr.active-row {
  font-weight: bold;
  color: #009879;
}

button {
  width: 100%;
  font-size: calc(3px + 2vmin);
  border-radius: 5px;
  border: none;
  color: white;
  padding: 10px 10px;
  text-decoration: none;
  margin: 4px 2px;
  cursor: pointer;
}

.cta {
  background-color: green;
}

.caution {
  background-color: red;
}

.cta:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

input {
  font-size: calc(3px + 2vmin);
  width: 100%;
}

.label-wrap{
  display:flex;
}

